# llmca

./: .env.example  .gitignore  Cargo.toml  README.md  compile_videos.sh  create_mozaic.sh  resolvers.toml.example
dynamical-system/: Cargo.toml
dynamical-system/src/: lib.rs
dynamical-system/src/life/: entity.rs  manager.rs  mod.rs
dynamical-system/src/system/: mod.rs  space.rs  telemetry.rs  unit.rs  unit_next.rs
generate-artifacts/: Cargo.toml
generate-artifacts/src/: main.rs
life/: Cargo.toml  README.md
life/src/: app.rs  error_template.rs  lib.rs  main.rs
minimal-ui/: Cargo.toml
minimal-ui/src/: main.rs
observatory/: Cargo.toml
observatory/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
source/: Cargo.toml
source/src/: gemma3_loader.rs  lib.rs  main.rs
src/: lib.rs  main.rs  system.rs  unit.rs  unit_next.rs
swarm/: Cargo.toml
swarm/src/: main.rs  primitives.rs
