[package]
name = "llmca"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
eframe = "0.29.1"
egui = "0.29.1"
egui_graphs = "0.22.0"
futures = "0.3.31"
image = "0.25.5"
itertools = "0.13.0"
kdam = "0.6.0"
macroquad = "0.4.13"
md5 = "0.7.0"
petgraph = "0.6.5"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
schemars = { version = "0.8.21", features = ["chrono"] }
serde = "1.0.214"
serde_derive = "1.0.214"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
