[package]
name = "dynamical-system"
version = "0.1.0"
edition = "2021"


[dependencies]
futures = "0.3.31"
itertools = "0.14.0"
kdam = "0.6.3"
md5 = "0.8.0"
rand = "0.9.2"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
petgraph = { version = "0.8.3", features = ["serde-1"] }
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
schemars = { version = "1.0.4", features = ["chrono04"] }
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
toml = "0.9.7"
