[package]
name = "dynamical-system"
version = "0.1.0"
edition = "2021"


[dependencies]
futures = "0.3.32"
itertools = "0.14.0"
md5 = "0.8.0"
rand = "0.10.1"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
petgraph = { version = "0.8.3", features = ["serde-1"] }
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
schemars = { version = "1.2.1", features = ["chrono04"] }
tokio = { version = "1.52.2", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }
toml = "1.1.2+spec-1.1.0"
tracing = "0.1.44"
rig-core = "0.36.0"
