[package]
name = "minimal-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
eframe = "0.32.3"
egui = "0.32.3"
egui_graphs = "0.28.0"
futures = "0.3.31"
image = "0.25.8"
itertools = "0.14.0"
kdam = "0.6.3"
macroquad = "0.4.14"
md5 = "0.8.0"
tokio = { version = "1.47.1", features = ["full"] }
dynamical-system = { path = "../dynamical-system" }
