[package]
name = "minimal-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
eframe = "0.34.1"
egui = "0.34.1"
egui_graphs = "0.30.0"
futures = "0.3.32"
image = "0.25.10"
itertools = "0.14.0"
macroquad = "0.4.14"
md5 = "0.8.0"
tokio = { version = "1.52.1", features = ["full"] }
dynamical-system = { path = "../dynamical-system" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
