[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
image = "0.25.5"
itertools = "0.13.0"
md5 = "0.7.0"
tokio = { version = "1.41.1", features = ["full"] }
dynamical-system = { path = "../dynamical-system" }
poem = "3.1.5"
poem-openapi = { version = "5.1.4", features = ["swagger-ui"] }
serde_json = "1.0.133"
